--- a/Final_Project_Machin_Learning.ipynb
+++ b/Final_Project_Machin_Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Final Project - Machin Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPhnZfMZrH1+FUEMcu8rBjJ",
+      "authorship_tag": "ABX9TyMga1AxBxKd9HiS0loB0YvD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# <u>**Final Project - Machin Learning**</u>\n",
+        "# **<u>Final Project - Machin Learning</u>**\n",
         "\n",
         "---\n",
         "\n",
