--- a/Final_Project_Machin_Learning.ipynb
+++ b/Final_Project_Machin_Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Final Project - Machin Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMga1AxBxKd9HiS0loB0YvD",
+      "authorship_tag": "ABX9TyOsd99bDKulRGP1DswtPszs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## <u>**Project Objective**</u>\n",
+        "## **<u>Project Objective</u>**\n",
         "\n",
         "*   Check whether ML algorithms can classify images without image pre-processin\n",
         "\n",
@@ -238,7 +238,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## <u>**Auto-Encoded Model**</u>\n",
+        "## **<u>Auto-Encoded Model</u>**\n",
         "\n",
         "\n",
         "An Auto-Encoder is a type of artificial neural network used to learn efficient\n",
@@ -399,7 +399,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### <u>**Autoencoder Model**</u>"
+        "#### **<u>Autoencoder Model</u>**"
       ],
       "metadata": {
         "id": "OPb7bNReAbbP"
@@ -613,7 +613,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## <u>**PCA- Principal Component Analysis**</u>\n",
+        "## **<u>PCA- Principal Component Analysis</u>**\n",
         "\n",
         "\n",
         "A PCA is an extension of dimensionality reduction that is applied to the visualization of high-dimensional data.\n",
@@ -657,7 +657,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <u>**Plotting**</u>"
+        "### **<u>Plotting</u>**"
       ],
       "metadata": {
         "id": "as1706cqL0aJ"
@@ -773,7 +773,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## <u>**Machine Learning and Deep Learning methods:**</u>\n",
+        "## **<u>Machine Learning and Deep Learning methods:</u>**\n",
         "\n",
         "*   Logistic Regression\n",
         "\n",
@@ -801,7 +801,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### <u>**Logistic Regression**</u>\n",
+        "#### **<u>Logistic Regression</u>**\n",
         "\n",
         "> In statistical analysis, logistic regression predicts whether a data set belongs to a predefined class based on prior observations.\\\n",
         "By using the sigmoid function, logistic regression can set model output from 0 to 1, and the logistic loss is applied to penalize data classification errors.\n",
@@ -885,7 +885,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### <u>**SVM - Support vector machine**</u>\n",
+        "#### **<u>SVM - Support vector machine</u>**\n",
         "\n",
         "> The Support Vector Machine finds the hyperplane that labels the dataset using a linear model.\\\n",
         "Based on the constant margin from both sides of the hyperplane, the algorithm reduces the plane weights to find the closest point, creating the support vectors.\\\n",
@@ -968,7 +968,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### <u>**KNN - K-Nearest Neighbors**</u>\n",
+        "#### **<u>KNN - K-Nearest Neighbors</u>**\n",
         "\n",
         "> A k-nearest neighbor algorithm solves classification and regression problems by assuming that similar things exist nearby.\\\n",
         "Using a distance function, the algorithm classifies a new sample with the label of the k nearest neighbors whose distance is the smallest from the dataset.\n"
@@ -1050,7 +1050,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### <u>**CNN - Convolutional neural network**</u>\n",
+        "#### **<u>CNN - Convolutional neural network</u>**\n",
         "\n",
         "> Convolutional neural networks process data with a grid-like topology, such as images.\\\n",
         "CNN typically consists of three layers: a convolutional layer, a pooling layer, and a fully connected layer.\\\n",
@@ -1066,7 +1066,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### <u>**MLP - Multilayer perceptron**</u>\n",
+        "#### **<u>MLP - Multilayer perceptron</u>**\n",
         "\n",
         "> A multi-layer Perceptron is a supervised learning algorithm that learns a mapping function from M input dimensions to 0 output dimensions.\\\n",
         "With a set of features X and a target y, it can learn a nonlinear function approximator for classification or regression.\\\n",
