--- a/Final_Project_Machin_Learning.ipynb
+++ b/Final_Project_Machin_Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Final Project - Machin Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOsd99bDKulRGP1DswtPszs",
+      "authorship_tag": "ABX9TyNQ2Jr3/ze5RU/xUWyze6dt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,9 +111,8 @@
         "from keras.layers import Dense, Dropout, Flatten, Input, Conv2D, MaxPooling2D\n",
         "from tensorflow.keras.optimizers import RMSprop\n",
         "\n",
-        "# Confusion Matrix\n",
         "from sklearn import metrics\n",
-        "from sklearn.metrics import confusion_matrix, accuracy_score"
+        "from sklearn.metrics import accuracy_score"
       ],
       "metadata": {
         "id": "hehSNGZavdKe"
