--- a/Final_Project_Machin_Learning.ipynb
+++ b/Final_Project_Machin_Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Final Project - Machin Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQ2Jr3/ze5RU/xUWyze6dt",
+      "authorship_tag": "ABX9TyPkMN/lBonqaZz6g2Af/wOq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,7 +161,7 @@
       "cell_type": "markdown",
       "source": [
         "> <u>Normalize and reshape the data:</u>\\\n",
-        "> As we only need images from the dataset to encode and decode, we won't use the labels.\n",
+        "As we only need images from the dataset to encode and decode, we won't use the labels.\n",
         "\n"
       ],
       "metadata": {
